Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-15944

LNet: adding dst udsp rule before peer is discovered causes oops on peer discovery

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • None
    • 3
    • 9223372036854775807

      This has been found and reported by hornc:

      The following sequence of commands causes a crash:

      # lnetctl peer del --prim_nid=10.1.0.60@o2ib1 # <-- make sure there no record of this peer
      # lnetctl udsp add --dst tcp --prio 1
      # lnetctl discover 192.168.122.60@tcp

      The trace is as follows:

      [5449781.397300] BUG: unable to handle kernel NULL pointer dereference at 0000000000000028
      [5449781.399193] IP: [<ffffffffc0c36ddb>] lnet_udsp_apply_rule_on_lpni+0xbb/0x7b0 [lnet]
      [5449781.400130] PGD 8000000055a7f067 PUD 4964e067 PMD 0 
      [5449781.400717] Oops: 0000 [#1] SMP 
      [5449781.418329] Call Trace:
      [5449781.419109]  [<ffffffffc0c35844>] lnet_udsp_apply_single_policy+0xf4/0x540 [lnet]
      [5449781.419881]  [<ffffffffc0c35cce>] lnet_udsp_apply_policies_helper.part.8+0x3e/0x70 [lnet]
      [5449781.420644]  [<ffffffffc0c37db6>] lnet_udsp_apply_policies_on_lpni+0x56/0x80 [lnet]
      [5449781.421386]  [<ffffffffc0c36d20>] ? lnet_udsp_apply_rte_rule_on_nets+0x130/0x130 [lnet]
      [5449781.422228]  [<ffffffffc0c28231>] lnet_peer_attach_peer_ni+0x161/0x600 [lnet]
      [5449781.422987]  [<ffffffffc0c2883e>] lnet_peer_ni_traffic_add+0x16e/0x2b0 [lnet]
      [5449781.423761]  [<ffffffffc0c2de25>] lnet_peerni_by_nid_locked+0xe5/0x140 [lnet]
      [5449781.424521]  [<ffffffffc0c2df5e>] lnet_nid2peerni_locked+0xde/0xf0 [lnet]
      [5449781.425281]  [<ffffffffc0bf8713>] LNetCtl+0x14d3/0x1c80 [lnet]
      [5449781.426061]  [<ffffffffc0bf59fb>] ? LNetNIInit+0x8b/0xd50 [lnet]
      [5449781.426818]  [<ffffffffc0c18a33>] lnet_ioctl+0x63/0x270 [lnet]
      [5449781.427581]  [<ffffffff8ad90b6f>] notifier_call_chain+0x4f/0x70
      [5449781.428345]  [<ffffffff8a6cc15d>] __blocking_notifier_call_chain+0x4d/0x70
      [5449781.429083]  [<ffffffff8a6cc196>] blocking_notifier_call_chain+0x16/0x20
      [5449781.429837]  [<ffffffffc0bbc3ad>] libcfs_psdev_ioctl+0x43d/0x5c0 [libcfs]
      [5449781.430580]  [<ffffffff8a863590>] do_vfs_ioctl+0x3a0/0x5b0
      [5449781.431319]  [<ffffffff8a863841>] SyS_ioctl+0xa1/0xc0
      [5449781.432065]  [<ffffffff8ad95f92>] system_call_fastpath+0x25/0x2a
      

            cbordage Cyril Bordage
            ssmirnov Serguei Smirnov
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: